# FullTextSearch

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  generate_flamegraph.sh
docs/: run_llama.cpp_server.md
scripts/: generate_flamegraph.sh  generate_words_with_levenstein_distance.py
scripts/bench/: benchmark.py
scripts/evaluation/: evaluation.ipynb
src/: fts_engine.hpp  main.cpp  test.cpp  utils.hpp
src/algorithms/InvertedIndex/: InvertedIndexEngine.cpp  InvertedIndexEngine.hpp  inverted_index_engine.cpp  inverted_index_engine.hpp
src/algorithms/TrigramIndex/: TrigramIndexEngine.cpp  TrigramIndexEngine.hpp
src/algorithms/VectorSpaceModel/: VectorSpaceModelEngine.cpp  VectorSpaceModelEngine.hpp
src/algorithms/VectorSpaceModel/index/: VectorSpaceLib.h
src/algorithms/VectorSpaceModel/index/hnsw/: HNSWAlg.cpp  HNSWAlg.h  VisitedList.h
src/algorithms/VectorSpaceModel/index/hnsw/spaces/: L2Space.h
src/algorithms/inverted/: inverted_index_engine.cpp  inverted_index_engine.hpp
src/algorithms/trigram/: trigram_index_engine.cpp  trigram_index_engine.hpp
src/algorithms/trigram/index/: hash_index.hpp  index.hpp
src/algorithms/trigram/models/: doc_freq.hpp  trigram.hpp
src/algorithms/trigram/parser/: trigram_parser.cpp  trigram_parser.hpp
src/algorithms/vector/: file_io.hpp  vector_engine.cpp  vector_engine.hpp  vector_engine_tfidf.cpp  vector_engine_tfidf.hpp
src/algorithms/vector/index/: vector_lib.hpp
src/algorithms/vector/index/hnsw/: hnsw_alg.cpp  hnsw_alg.hpp  visited_list.hpp
src/algorithms/vector/index/hnsw/spaces/: cosine_sim.hpp  cosine_space_sparse.hpp  l2_space.hpp  l2_space_doc_id.hpp  l2_space_sparse.hpp
src/algorithms/vsm/: vector_engine.cpp  vector_engine.hpp  vector_space_model_engine.cpp  vector_space_model_engine.hpp
src/algorithms/vsm/index/hnsw/: hnsw.cpp  hnsw.hpp
src/algorithms/vsm/index/hnsw/spaces/: l2_space.hpp
src/bootstrap/: cli.cpp  cli.hpp
src/dataUtils/: Document.hpp
src/documents/: document.hpp  document_iterator.cpp  document_iterator.hpp  document_iterator_old.cpp  document_iterator_old.hpp
src/queries/: query_iterator.cpp
src/ranking/: bm25.cpp  bm25.hpp  ranking.hpp  tf_idf.cpp  tf_idf.hpp
src/scoring/: bm25.cpp  bm25.hpp  scoring_function.hpp  tf_idf.cpp  tf_idf.hpp  tf_idf_gensim.cpp  tf_idf_gensim.hpp
src/tokenizer/: tokenizer.cpp  tokenizer.hpp
test/: CMakeLists.txt
test/vector/: hnsw_test.cpp  hnsw_tests.cpp
